styles/formatting.css
body{ 
	color: white;
	font-family: 'Open Sans', sans-serif;
	overflow-x: hidden;
	margin: 0px;
	background-color: #f1f1f1;
/*	background-image: url("../images/BSFbackground.png");
	background-size: cover;
	background-repeat: repeat;
	background-position: center center;*/
}

a:link, a:visited, a:hover, a:active {
	color: #3498db;
	text-decoration: none;
}

h1{
	color: white;
	text-align: left;
	font-weight: 800;
	font-size: 72px;
	padding-top: 10px;
}

p{
	line-height: 1.2;
	font-size: 18px;
	margin-bottom: 30px;
}


 .container {
      position: absolute;
      height: 100%;
      width: 100%;
    }


.navbar{
 	background: rgba(0, 0, 0, 0);
 	border: 0;
 	font-color: white; 	
 	width: 100%;
 	height: 40px;
 	z-index: 990;
 	-webkit-transition: height 0.3s;
    -moz-transition: height 0.3s;
    -ms-transition: height 0.3s;
    -o-transition: height 0.3s;
    transition: height 0.3s;
}
.icon-bar
{
	border-color: #888;
}
.navbar-default .navbar-toggle{
	border-color: #888;
}
.navbar-left{
	display:table;
	border-collapse: separate;
 	border-spacing: 15px 0px;
}

.navbar-right{
	display:table;
	border-collapse: separate;
 	border-spacing: 2px 0px;
}

.navbar-left > li > a{
  display: table-cell;
  font-size: 14px;
  font-weight: bold;
   -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    -ms-transition: all 0.3s;
    -o-transition: all 0.3s;
    transition: all 0.3s;
}

#MainName {
	font-weight: 600;
	margin-top: 30px;
	margin-left: 53px;
}

.navbar-right > li > a{
  display: table-cell;
  font-size: 14px;
  font-weight: bold;
   -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    -ms-transition: all 0.3s;
    -o-transition: all 0.3s;
    transition: all 0.3s;
}

.nav.navbar-nav.navbar-left li a:hover {
    color: #d31cbc;
}

.nav.navbar-nav.navbar-right li a {
    color: #3498db;
}

.nav.navbar-nav.navbar-right li a:hover {
    color: #d31cbc;
}

.navbar.smaller{
	height: 40px;
}

.sponsor .row{
	padding-bottom: 5vh;
}

@media(max-width: 768px)
{
	.navbar-collapse{
		background-color: black;
	}

	#MainName{
		text-align: center;
	}
}

#signup-text{
   pointer-events: none;
   cursor: default;
   margin-right: 0px;
   color: #777777;
   font-weight: normal;
}

@media(max-width: 667px)
{
	.navbar{
		background: rgba(0, 0, 0, 0);
	}
	.navbar-nav > li{
	  margin-left:0px;
	  margin-right:0px;
	}
}

.content{
	padding-top: 30px;
	position: relative;
	background-color: #f1f1f1;
}

/* Tablet version */
@media(max-width: 992px){
	.navbar{
		background: rgba(0, 0, 0, 1);
		height: 40px;
	}
	h1{
		font-size: 38px;
		line-height: 1.2;
	}
	
	#MainLogo{
		width: 150px;
		padding-left: 10vw;
	}
	#mainlogodiv{
		text-align: center;
	}

}
.date-time{
	text-align: center;
	font-weight: 600;
	color: #777777;
	margin-top: 30px;
	font-size: 16px;
}
header{
	position: relative;
	height: 100vh;
	padding-top: 10vh;
	background-color: #f1f1f1;
}

@media(max-width: 990px) {
  #MainName{
    margin-right: 20px;
  }
	
	.sponsor .row {
		padding-bottom: 0;
	}
	.sponsorlogo {
		margin-bottom: 20px;
	}
}

#MainLogo{
	/*width: 200px;*/
	height: 353px;
	width: 353px;
	margin-right: 40px;
}

.signup{
	text-align: center;
}

.signup-buttons{
	color: #3498db;
	font-weight: bold;
	margin-top: 35px;
	font-size: 18px;
	border-radius: none;
	margin-left: 50px;
	margin-right: 50px;
	background-color: transparent;
	border-color: transparent;
}

.signup-buttons:hover {
	-webkit-animation: registerHover .4s ease;
	color: #d31cbc;
	background-color: transparent;
	border-color: transparent;
}

@media(max-width: 570px) {
    .signup-buttons{
        margin-left: 10px;
        margin-right: 10px;
    }
	  header {
			margin-bottom: 40px;
		}
}

@media (min-width:500px) and (max-width: 995px) {
    #MainLogo {
       margin-left: 50px;
        margin-right: 50px;
        padding-left: 0px;
    }
    #MainName {
        padding-left: 50px;
        
    }
}

.about{
	height: 100%;
	position: relative;
	padding-left: 60px;
	padding-bottom: 60px;
	background-color:#3498DB;
}
@media(max-width: 990px)
{
    .about{
        padding-left: 30px;
        padding-right: 30px;   
    }
	
		.about p {
			font-size:16px;
		}
}
.about .col-md-4{
	text-align: center;
}

.divname{
	padding-top: 60px;
	padding-bottom: 50px;
}

.h1, .h2, .h3, h1, h2, h3 {
    margin-top: 0;
    margin-bottom: 10px;
}

#sponsorname{
	color: #555555;
	padding-bottom: 0;
}

#heal{
	width: 77%;
}

#social{
	margin-top: 60px;
}

@media(max-width: 992px){
	.divname{
		padding-top: 40px;
		padding-bottom: 20px;
		text-align: center;
	}
	.col-md-6 > #social{
	margin-top: 60px;
	margin-bottom: 30px;
	text-align: center;
	}
}

@media(max-width: 500px)
{
	.col-md-6 > #social{
	padding-left: 17vw;
	}
	
	#MainLogo {
		width: 80%;
		height: 80%;
	}	
}

.fa{
	color: white;
	margin-right: 40px;
	height: 40px;
	width: 40px;
	font-size: 30px;
}
.clublogo{
	height: 100px;
	width: 100px;
}

.sponsor{
	height: 100%;
	color: #777777;
	background-color: white;
	width: 100vw;
	padding-bottom: 40px;
}

.sponsor .col-md-6{
	text-align: center;
}

.sponsorlink{
	color: #3498db;
	font-weight: bold;
}

.partnertext{
	margin-top: 50px;
	font-weight: bold;
	font-size: 21px;
}

.sponsorlogo{
	width: 100%;
}

.sponsorcontent{
	padding-left: 60px;
	padding-right: 60px;
}

#classy {
    margin-top: -60px;
    margin-bottom: -60px;
}

#taboola{
	width: 80%;
}

/*OLD FORMAT (REFERENCE TO HTML)
#tenoneten, #soothe {
    width: 50%;
    margin-left: 50px;
}*/

#tenoneten, #soothe {
    width: auto;
    height: auto;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

#shift {
    margin-top: 20px;
}

#ezkie{
	width: 80%;
}

#wemash{
	width: 75%;
}

#whisper{
	display: block;
    margin-left: auto;
    margin-right: auto;
}

#flyy {
    width: 50%;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

#rackspace {
    margin-top: 20px;
}   


@-webkit-keyframes registerHover {
	from {
		color: #3498db;
	}
	to {
		color: #d31cbc;
	}
}
#soothe, #tenoneten {
	height: 118px;
}

